# pai-take-home-exercise

./: .cfnlintrc.yaml  .env.example  .gitignore  .mcp.json  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  phase-01-complete.md  phase-03-complete.md  phase-04-complete.md  phase-05-complete.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/plans/: 00-master-plan.md  phase-01-foundation.md  phase-02-core-pipeline.md  phase-03-output-quality.md  phase-04-cicd-testing.md  phase-05-docs-demo.md  phase-06-enhancements.md
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy.yml
docs/: aws-setup.md  demo-script.md  design-decisions.md  security-configuration.md  solution-architecture.md  uat-walkthrough.md
docs/plans/: 2026-03-19-dev-environment-cleanup.md  2026-03-20-ai-quality-and-dx-overhaul.md  2026-03-20-cloud-cleanup-and-stack-fix.md  2026-03-20-finalize-deliverables.md
infra/cloudformation/: stack.yaml
inputs/: PAI-Take_Home_Exercise.md  paul-prae-profile.md  sample_sku_brief.json
inputs/demo_briefs/: energy-drink-apac.json  granola-bar-latam.json  protein-bar-eu.json  trail-mix-apac.json  trail-mix-eu.json  (+2 more)
secrets/: README.md
tests/: conftest.py  test_asset_manager.py  test_image_generator.py  test_integration.py  test_output_quality.py  test_prompt_constructor.py  test_sku_parser.py  test_text_overlay.py  test_text_reasoning.py
(+69 files in other folders)
